Adding quantity button functionalityand minimal css.

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   <input type="text" id="symbol" placeholder="Symbol">
   <input type="text" id="quantity" placeholder="Quantity">
   <button id="buy">Buy</button>
-  <table id="table">
-    <th>Company</th>
-    <tr>
-    <th>Price</th>
-    <th>Quantity</th>
-    <th>Day Change</th>
-    <th>Percentage Change</th>
-    <th> </th>
-  </table>
-  <p id="total_value"></p>
-
+  <div>
+    <table id="table">
+      <th>Company</th>
+      <th>Price</th>
+      <th>Quantity</th>
+      <th>Day Change</th>
+      <th>Percentage Change</th>
+      <th>Remove?</th>
+    </table>
+    <p id="total_value"></p>
+  </div>
   <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
   <script src="main.js"></script>
 </body>
