--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!doc html>
 <html>
 <head>
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <input type="text" id="symbol" placeholder="Symbol">
-  <input type="text" id="quantity" placeholder="Quantity">
-  <button id="buy">Buy</button>
-  <div>
-    <table id="table">
-      <th>Company</th>
-      <th>Price</th>
-      <th>Quantity</th>
-      <th>Day Change</th>
-      <th>Percentage Change</th>
-      <th>Remove?</th>
-    </table>
-    <p id="total_value"></p>
+  <div class="container">
+    <div class="twelve comluns">
+      <h1>Stocks Here, Get Your Stocks!</h1>
+      <input type="text" id="symbol" placeholder="Symbol">
+      <input type="text" id="quantity" placeholder="Quantity">
+      <button id="buy">Buy</button>
+      <div>
+        <table id="table" class="table-striped">
+          <th>Company</th>
+          <th>Price</th>
+          <th>Quantity</th>
+          <th>Day Change</th>
+          <th>Percentage Change</th>
+          <th>Remove?</th>
+        </table>
+        <p id="total_value"></p>
+      </div>
+    </div>
   </div>
   <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
   <script src="main.js"></script>
