--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="main.css">
+  <title>STOCKS STOCKS STOCKS</title>
 </head>
 <body>
   <div class = "container">
@@ -17,8 +18,9 @@
       <div>
         <table id="table" class="table table-striped table-bordered">
           <th>Company</th>
-          <th>Price</th>
+          <th>Purchase Price</th>
           <th>Quantity</th>
+          <th>Current Price</th>
           <th>Day Change</th>
           <th>Percentage Change</th>
           <th>Remove?</th>
