--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <input type="text" id="symbol" placeholder="Symbol">
         <input type="text" id="quantity" placeholder="Quantity">
         <button id="buy">Buy</button>
+        <button id="refresh">Refresh</button>
       </form>
       <div>
         <table id="table" class="table table-striped table-bordered">
